fix: added dark color to dark mode

--- a/tailwind/custom/components.css
+++ b/tailwind/custom/components.css
@@ -16,3 +16,9 @@
 .entry-content > .alignfull {
 	@apply max-w-none;
 }
+
+@layer components {
+  body ul {
+    @apply list-none p-0;
+  }
+}
